[package]
name = "mongo_archive"
version = "0.1.0"
edition = "2021"
authors = ["zerodegress"]
repository = "https://github.com/zerodegress/mongo_archive"
license = "LGPL-3.0"
description = "A parser for MongoDB archive."
keywords = ["mongodb", "bson", "archive", "parser"]

[dependencies]
bson = "2.10.0"
byteorder = "1.5.0"
bytes = "1.6.0"
memchr = "2.7.2"
